# CallPilot

./: Dockerfile  README.md  app.py  aws_client.py  main.py  pyproject.toml  requirements.txt  speech_to_text.py  test.py
deploy/: Dockerfile  docker-compose.yml  entrypoint.sh
get-response/: Dockerfile  get.py  requirements.txt
stt-by-api/: requirements.txt  speech_to_text.py
stt-by-api/cloud_workflows/: workflow.yaml
stt-by-vm/: .gitattributes  Dockerfile  requirements.txt  speech_to_text.py
stt-by-vm/cloud_workflows/: workflow.yaml
summarize-llm/: Dockerfile  requirements.txt  summarize.py
upload/: upload_function.py
voice_to_text/: main.py
voice_to_text/src/speech_to_text/: speech_to_text.py
